--- a/www/kpw2008/faq.html
+++ b/www/kpw2008/faq.html
@@ -133,23 +133,20 @@
             <div class="footer_block">
               <h2>Korean Perl Workshop</h2>
               <p>
-                <span>메일링리스트 가입</span> |
-                <span>개선 의견 접수</span> |
-                <span>기타 문의</span>
+                <span><a href="http://groups.google.com/group/perl-kr-conf-2008">메일링리스트 가입</a></span> |
+                <span><a href="mailto:keedi.k _AT_ gmail _DOT_ com">기타 문의</a></span>
+                <span>RSS Feeds</span>
               </p>
-              <p>내용!</p>
             </div>
           </div>
           <div class="width33 float_left">
             <div class="footer_block">
-              <h2>Hello World</h2>
-              <p>ERqwr oinwrt qewr WRY qlewkrn qlektm WTRUY qelwkr mewtyklm weTEt uet qewr.</p>
+              <h2></h2>
             </div>
           </div>
           <div class="width33 float_left">
             <div class="footer_block">
-              <h2>Hello World</h2>
-              <p>ERqwr oinwrt qewr WRY qlewkrn qlektm WTRUY qelwkr mewtyklm weTEt uet qewr.</p>
+              <h2></h2>
             </div>
           </div>
         </div>
