--- a/trunk/www/kpw2008/index.html
+++ b/trunk/www/kpw2008/index.html
@@ -153,7 +153,7 @@
               <div id="silver-sponsors">
                 <h3>Silver Sponsors</h3>
                 <ul>
-                  <li> <a href="http://www.fossa.or.kr/"> <img src="images/banners/FOSSA.png" alt="Free OpenSource Software Association" /> </a> </li>
+                  <li> <a href="http://www.fossa.or.kr"> <img src="images/banners/FOSSA.png" alt="Free OpenSource Software Association" /> </a> </li>
                 </ul>
               </div>
 
@@ -206,5 +206,13 @@
         <p>Copyright © Seoul Perl Mongers, Korea. All rights reserved.</p>
       </div>
     </div>
+    <script type="text/javascript">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+      var pageTracker = _gat._getTracker("UA-387065-3");
+      pageTracker._trackPageview();
+    </script>
   </body>
 </html>
