--- a/www/kpw2008/schedule.html
+++ b/www/kpw2008/schedule.html
@@ -55,6 +55,7 @@
               <div id="bronze-sponsors">
                 <h3>Bronze Sponsors</h3>
                 <ul>
+                  <li> <a href="http://www.scitech.co.kr"> <img src="images/banners/scitech.jpg" alt="SciTech Media, Inc." /> </a> </li>
                   <li> <a href="http://www.hanb.or.kr"> <img src="images/banners/hanbit.png" alt="Hanbit Media, Inc."/> </a> </li>
                 </ul>
               </div>
