--- a/www/kpw2008/faq.html
+++ b/www/kpw2008/faq.html
@@ -32,15 +32,15 @@
                 </p>
                 <p>
                   <b>A:</b>
-                  현장 등록비는 학생 및 청소년은 1만원, 그외의 경우
-                  2만원 입니다. 사전 등록을 하실 경우 50%의 할인 혜택이
-                  있습니다. 행사 10일 전부터 사전 등록을 시작하며
-                  선착순 마감 예정입니다.
+                  현장 등록비는 청소년 및 학생(대학원생 포함)은 1만원,
+		  그외의 경우(직장인) 2만원 입니다. 사전 등록을 하실 경우
+		  50%의 할인 혜택이 있습니다.
+		  행사 10일 전부터 사전 등록을 시작하며 선착순 마감 예정입니다.
 
                   <ul>
                     <b>등록비 :</b>
-                    <li>사전등록: 학생  5,000원 일반 10,000원</li>
-                    <li>현장등록: 학생 10,000원 일반 20,000원</li>
+                    <li> <b>사전등록</b>: 청소년 및 학생(대학원생 포함)  5,000원 직장인 10,000원 </li>
+                    <li> <b>현장등록</b>: 청소년 및 학생(대학원생 포함) 10,000원 직장인 20,000원 </li>
                   </ul>
                 </p>
               </div>
