--- a/www/kpw2008/links.html
+++ b/www/kpw2008/links.html
@@ -48,6 +48,15 @@
                 <li>perl.com
                   <a href="http://perl.com">perl.com</a></li>
               </ul>
+              <br />
+              <h3>펄 IRC관련 링크</h3>
+              <ul>
+                <li>Web IRC
+                  <a href="http://doc.perl.kr/twiki/bin/view/Wiki/WebIRC">http://doc.perl.kr/twiki/bin/view/Wiki/WebIRC</a></li>
+                <li>펄 IRC
+                  <a href="http://doc.perl.kr/twiki/bin/view/Wiki/PerlIRC">http://doc.perl.kr/twiki/bin/view/Wiki/PerlIRC</a></li>
+              </ul>
+
             </div>
           </div>
           <div class="widthsponsors float_left">
