--- a/www/kpw2008/faq.html
+++ b/www/kpw2008/faq.html
@@ -103,6 +103,7 @@
                 <h3>Silver Sponsors</h3>
                 <ul>
                   <li> <a href="http://www.fossa.or.kr"> <img src="images/banners/FOSSA.png" alt="Free OpenSource Software Association" /> </a> </li>
+		  <li> <a href="http://www.kobic.re.kr"> <object width="120" height="40"> <embed src="images/banners/kobic.swf" type="application/x-shockwave-flash" width="120" height="40"> </embed> </object> </a> </li>
                 </ul>
               </div>
 
