--- a/www/kpw2008/index.html
+++ b/www/kpw2008/index.html
@@ -88,7 +88,7 @@
                     <li> <b>현장등록</b>: 청소년 및 학생(대학원생 포함) 10,000원 직장인 20,000원 </li>
                   </ul>
                   <p>
-                    8월 11일 월요일부터 <a href="register.html">이곳</a>에서 등록할 수 있습니다.
+                    8월 13일 수요일부터 <a href="register.html">이곳</a>에서 등록할 수 있습니다.
                   </p>
                 </li>
                 <li>
