--- a/www/kpw2008/register.html
+++ b/www/kpw2008/register.html
@@ -26,10 +26,8 @@
           <div class="width66 float_left">
             <div class="content_block">
               <h1>참가 신청 양식</h1>
-              <p>참가 신청은 8월 11일 월요일 부터 가능합니다. :-)</p>
+              <h2>참가 신청은 8월 13일 수요일 부터 가능합니다. :-)</p>
               <p>Coming Soon!</p>
-	      <hr>
-	      <p>참가 신청개시가 약간 늦어지고 있습니다. 이 점 양해 부탁드립니다.</p>
             </div>
           </div>
           <div class="widthsponsors float_left">
